--- a/_includes/site-content.html
+++ b/_includes/site-content.html
@@ -1,8 +1,12 @@
+<nav class="site-nav">
+  <ul>
+    <li>
+      <a href="/">Home</a>
+    </li>
+  </ul>
+</nav>
 <main class="site-content">
     <header class="site-content_header">
-      <h1>
-        {{ page.title }}
-      </h1>
     </header> 
     <section class="site-content_body">
       {{ content }}
