Updated site links

--- a/_includes/site-content.html
+++ b/_includes/site-content.html
@@ -1,7 +1,7 @@
 <nav class="site-nav">
   <ul>
     <li>
-      <a href="{{ site.url }}">Home</a>
+      <a href="{{ site.baseurl }}/">Home</a>
     </li>
   </ul>
 </nav>
