- Added Self entry - linting fix - updated card logo styling

--- a/_sass/includes/pl-card.scss
+++ b/_sass/includes/pl-card.scss
@@ -7,6 +7,7 @@
 }
 
 .pl-card_title {
+    color: black;
     font-size: 0.2in;
     font-weight: bold;
     left: 0.2in;
@@ -23,4 +24,5 @@
     position: absolute;
     right: 0.2in;
     top: 0.2in;
+    width: 2in;
 }
