--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/images/icons/favicon.ico" >
     <link rel="manifest" href="{{ site.baseurl }}/images/icons/site.webmanifest">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Feed" href="{{ site.baseurl }}/feed.xml" />
+    <script type="module" src="scripts/index.js"></script>
   </head>
   <body>
     {%- include site-content.html -%}
